...
import br.com.pokedex.feature.pokemoncompare.ui.model.ComparePokemonUiModel
import br.com.pokedex.feature.pokemoncompare.ui.state.CompareSide
import br.com.pokedex.feature.pokemoncompare.ui.state.SideUiState

private val bulbasaur = ComparePokemonUiModel(
    id = 1,
    name = "Bulbasaur",
    imageUrl = "",
    typeColor = Color(0xFF63BC5A),
    types = listOf("grass", "poison"),
    height = "0.7m",
    weight = "6.9kg",
    abilities = listOf("Overgrow"),
...
        CompareStatUiModel("SPD", 45),
    ),
)

private val charmander = ComparePokemonUiModel(
    id = 4,
    name = "Charmander",
    imageUrl = "",
    typeColor = Color(0xFFFF9741),
    types = listOf("fire"),
    height = "0.6m",
    weight = "8.5kg",
    abilities = listOf("Blaze"),
...
